--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-template",
+  "name": "simple-frontend-template",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
